--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "deploy": "./deploy.sh",
+        "predeploy": "npm run build"
     },
     "dependencies": {
         "@solana/web3.js": "^1.98.4",
